FIX an incorrectly formatted markdown link

--- a/notebooks/2023-03-28_tabulating-past-experiments.ipynb
+++ b/notebooks/2023-03-28_tabulating-past-experiments.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Tabulating Past Experiments\n",
     "\n",
-    "continuing from (the last notebook)[./2023-03-28-joining-cellartracker-metadata.ipynb], I have been attempting to analyse how my collection of samples is going, but my records are muddled. I need to form a table that contains information on what samples have been run on the 10cm column, and what was the quality of the chromatogram.\n",
+    "continuing from [the last notebook](./2023-03-28-joining-cellartracker-metadata.ipynb), I have been attempting to analyse how my collection of samples is going, but my records are muddled. I need to form a table that contains information on what samples have been run on the 10cm column, and what was the quality of the chromatogram.\n",
     "\n",
     "For simplicities sake, we will focus on the 255nm spectra, and define qualtiy as a high ratio of peak prominance to area under baseline. It would be useful at this point to tidy up Agilette and add baseline, peak, and correction functions to that codebase.\n",
     "\n",
