finalise time series characterization notebooks and downsampling
Former-commit-id: 37eb6fb6966120679e864a5521b77cb54de612e6
Former-commit-id: 560f41f6de98c997e52224125c99c97c9420734f

--- a/notebooks/time_series_characterization_and_compression/determining_time_precision.ipynb
+++ b/notebooks/time_series_characterization_and_compression/determining_time_precision.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Identifying the Precision of Spectrum Chromatogram Observations in my Dataset"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -41,8 +48,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Identifying the Precision of Spectrum Chromatogram Observations in my Dataset\n",
-    "\n",
     "There is question of what is the precision of the time points of my observations. For example, sample 154:"
    ]
   },
