testing nbstripout hook again
Former-commit-id: 44d96bce4d94b812e535fa349a994123faaf9b6d
Former-commit-id: 5e7c63f56f9a74fae816e3255ec731df5929d144

--- a/notebooks/offset_and_scale_y_axis.ipynb
+++ b/notebooks/offset_and_scale_y_axis.ipynb
@@ -19,41 +19,8 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "scipro = SignalProcessor()\n",
-    "df = pd.read_parquet(definitions.TEST_PARQ_PATH)\n",
+    "df = pd.read_parquet(definitions.XPRO_DOWNSAMPLED_PARQ_PATH)\n",
     "df"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Universal Time Axis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "First lets get rid of the index column and set mins to the index:\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df1 = (\n",
-    "    df.rename({\"torbreck-struie\": \"333\"}, axis=1, level=\"samplecode\")\n",
-    "    .stack([\"samplecode\", \"wine\"])\n",
-    "    .reset_index()\n",
-    "    .drop(\"i\", axis=1)\n",
-    "    .set_index([\"samplecode\", \"wine\", \"mins\"])\n",
-    "    .sort_index()\n",
-    "    .unstack([\"samplecode\", \"wine\"])\n",
-    "    .reorder_levels([\"samplecode\", \"wine\", \"vars\"], axis=1)\n",
-    ")\n",
-    "df1"
    ]
   },
   {
@@ -76,61 +43,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2 = (\n",
-    "    df1\n",
+    "df = (\n",
+    "    df\n",
     "    .pipe(scipro.zero_y_axis)\n",
     "    .pipe(lambda df: df if df.pipe(scipro.vars_subplots) else df)\n",
     ")\n",
-    "plt.suptitle(\"zeroed\")\n",
-    "# df2"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Min-max Scaling"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "\n",
-    "df3 = (\n",
-    "    df2\n",
-    "    .pipe(scipro.min_max_scale)\n",
-    "    .pipe(lambda df: df if df.pipe(scipro.vars_subplots) else df)\n",
-    ")\n",
-    "plt.suptitle(\"min-maxed\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Subsetting x-Axis"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now we dont want the baseline to be fitting the dead area after ~ 25 mins, but we need a way of identifying where the curve flattens out, i.e. the first derivative. While I would like to spend time working on this, I need to push on. we'll call an arbritary limit of 20 mins.\n",
-    "TODO: look into interpretatoin of first and second derivatives\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df4 = df3.loc[df3.index < pd.to_timedelta(20, unit=\"minutes\")]  # drop data after 20 min\n",
-    "df4"
+    "plt.suptitle(\"zeroed\")"
    ]
   },
   {
@@ -148,7 +66,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df4.to_parquet(definitions.PRO_PARQ_PATH)"
+    "df.to_parquet(definitions.XPRO_YPRO_DOWNSAMPLED_PARQ_PATH)"
    ]
   }
  ],
@@ -169,8 +87,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.1"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
