update pandas multiindex cheatsheet, add plotting cheat sheet
Former-commit-id: fb84cd48e6cbf603d8cd2c86a8b83a781d8e00c3
Former-commit-id: 24ba89ef419abc8d7e6b422c58721e02ba905cbb

--- a/notebooks/pandas_multiindex_cheatsheet.ipynb
+++ b/notebooks/pandas_multiindex_cheatsheet.ipynb
@@ -4,19 +4,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "| verb | method |\n",
-    "|---|---|\n",
-    "| sort multiindex | `DataFrame.sort_index` |\n",
-    "| reorder levels | `DataFrame.reorder_levels` |\n",
-    "| (re)name axes level(s) | `DataFrame.rename_axis` |\n"
+    "| verb | method | notes | \n",
+    "|---|---|---|\n",
+    "| sort multiindex | `DataFrame.sort_index` | NA |  \n",
+    "| reorder levels | `DataFrame.reorder_levels` | NA | \n",
+    "| (re)name an axis | `DataFrame.rename_axis` | appears to only work on non-multiindexed axes. No level option |\n",
+    "| (re)name multiindex level(s) | `pd.Index.set_names` | NA |\n",
+    "\n"
    ]
   }
  ],
  "metadata": {
   "language_info": {
    "name": "python"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
