moved savgol smoothing to its own notebook
Former-commit-id: fa5a180b937f514a6eada727ca050cd5408296e3
Former-commit-id: 5a1c30d193ff344bdaa2cb650932c086c804dfe4

--- a/notebooks/developing_baseline_subtraction.ipynb
+++ b/notebooks/developing_baseline_subtraction.ipynb
@@ -35,7 +35,7 @@
     "import matplotlib.pyplot as plt\n",
     "\n",
     "scipro = SignalProcessor()\n",
-    "df = pd.read_parquet(definitions.PRO_PARQ_PATH)\n",
+    "df = pd.read_parquet(definitions.XPRO_YPRO_DOWNSAMPLED_PARQ_PATH)\n",
     "df"
    ]
   },
@@ -113,34 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Much better. Why?\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Now I need to look at smoothing the signal.\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.pipe(lambda df: df if df.pipe(scipro.vars_subplots) else df)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "(df.pipe(scipro.savgol_smooth).pipe(scipro.vars_subplots))\n",
-    "# plt.suptitle(\"smoothed\")\n",
-    "# plt.show()"
+    "Much better. Why? It appears that the default settings for `.asls` allow for a a rougher fit."
    ]
   }
  ],
@@ -161,8 +134,7 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.11.1"
-  },
-  "orig_nbformat": 4
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
