added updated method of identifying representative sample through mean pearsons r
Former-commit-id: 140e2427a194519a194c4d51ffea16334179f1c2
Former-commit-id: 82a9107b48ca22cafb1a451ec4b29d35e2340a6e

--- a/chapter_signal_preprocessing.ipynb
+++ b/chapter_signal_preprocessing.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,20 +61,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/jonathan/mres_thesis/wine_analysis_hplc_uv/tests/test_data/processing_test_set/cupshz_testset_raw.pq'"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "definitions.RAW_PARQ_PATH"
    ]
@@ -90,20 +79,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/jonathan/mres_thesis/wine_analysis_hplc_uv/tests/test_data/processing_test_set/cupshz_testset_x.pq'"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "definitions.XPRO_DOWNSAMPLED_PARQ_PATH"
    ]
@@ -119,20 +97,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "'/Users/jonathan/mres_thesis/wine_analysis_hplc_uv/tests/test_data/processing_test_set/y_pro_cuprac_shzset_xy.pq'"
-      ]
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "definitions.XPRO_YPRO_DOWNSAMPLED_PARQ_PATH"
    ]
@@ -141,13 +108,50 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Over time I expect more methods to be added to the above, at least a smoothing routine."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Baseline Correction\n",
     "\n",
-    "General notes on baseline correction algorithms are currently (2023-09-04 13:48:23) being developed [here](notebooks/baseline_correction.ipynb).\n",
+    "General notes on baseline correction algorithms are currently (2023-09-04 13:48:23) being developed in [baseline_correction](notebooks/baseline_correction.ipynb).\n",
     "\n",
-    "A brief investigation on Backcor, a literature recommended baseline correction algorithm for chromatograms was undertaken [here](notebooks/backcor_on_sampleset.ipynb). Without manually tweaking the parameters it was found to perform poorly on the dataset, especially at the ends.\n",
+    "A brief investigation on Backcor, a literature recommended baseline correction algorithm for chromatograms was undertaken in [backcor_on_sampleset](notebooks/backcor_on_sampleset.ipynb). Without manually tweaking the parameters it was found to perform poorly on the dataset, especially at the ends.\n",
     "\n",
-    "Following x and y axis preprocessing developed [here]() and [here] respectively, an investigation into the different baseline correction methods has been started [here]\n"
+    "Following x and y axis preprocessing developed [here](./notebooks/time_axis_characterisation_and_normalization.ipynb) and [here](./notebooks/offset_and_scale_y_axis.ipynb) respectively, an investigation into the different baseline correction methods has been started in [developing_baseline_subtraction](./notebooks/developing_baseline_subtraction.ipynb)."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Signal Smoothing\n",
+    "\n",
+    "A prefunctory investigation into the appliation of Savitzky-Golay smoothing has been started in [investigating_signal_smoothing](./notebooks/investigating_signal_smoothing.ipynb), but as of 2023-09-07 14:48:51 hasn't gotten very far."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Multiple Signal Alignment via DTW\n",
+    "\n",
+    "2023-09-07 14:56:11\n",
+    "\n",
+    "The holy grail of this project is to apply [Dynamic Time Warping]() to a chromatographic dataset in order to align all peaks sample-by-sample. Efforts began in late April 2023 but faltered because the pipeline became unmaintainable. Five months later we're finally at a stage where we can begin again.\n",
+    "\n",
+    "The earlier sections of this chapter addressed basic signal preprocessing. Now, we need to produce a method of identifying the 'most similar' signal to all other signals in the set, then align on that signal.\n",
+    "\n",
+    "### Identifying Representative sample\n",
+    "\n",
+    "A method of identifying a representative sample as been established in [identifying_most_similar_signal](./notebooks/identifying_most_similar_signal.ipynb) and added to SignalProcessor as `most_correlated`. It uses the pandas built-in method `.corr` to construct a correlation matrix then return the samplecode idx object of the sample with the highest mean correlation.\n",
+    "\n",
+    "### DTW\n",
+    "\n",
+    "A method of applying DTW utilising `most_correlated` will be developed in [Dynamic Time Warping](./notebooks/dynamic_time_warping.ipynb)"
    ]
   },
   {
